# Research-Assistant

./: README.md
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/data/vectordb/e966f587-6b3d-4784-af5c-6350b8f21cb5/: index_metadata.pickle
backend/src/: main.py
backend/src/config/: db.py
backend/src/models/: chat_model.py  pdf_model.py  research_message.py  research_session.py  user_model.py
backend/src/routes/: chat_routes.py  research_chat_router.py  research_routes.py  user_routes.py
backend/src/schemas/: __init__.py  arxiv_schema.py  chat_schema.py  pdf_schema.py  research_chat_schema.py  user_schema.py
backend/src/services/: arxiv_client.py  arxiv_tools.py  embeddings.py  file_storage.py  llm_model.py  loader.py  research_message.py  research_session.py  splitter.py  tool_agent.py  vector_store.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  mockApi.ts  types.ts
frontend/src/api/: axios.ts
frontend/src/components/: Chat.tsx  ChatWindow.tsx  GreetScreen.tsx  Header.tsx  ProtectedRoute.tsx  Session.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/src/components/general-chat/: GeneralChat.tsx  GeneralChatInput.tsx
frontend/src/components/knowledge-base/: KBEmptyState.tsx  KBItemCard.tsx  KBSearchBar.tsx
frontend/src/components/layouts/: AppLayout.tsx  GeneralChatLayout.tsx  PDFChatLayout.tsx
frontend/src/components/pdf-chat/: PDFChat.tsx  PDFChatInput.tsx
frontend/src/components/ui/: LoadingDots.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/hooks/auth/: useLogin.ts  useSignup.ts
frontend/src/hooks/pdf/: usePdfChat.ts  usePdfDelete.ts  usePdfHistory.ts  usePdfUpload.ts
frontend/src/hooks/research/: useCreateResearchSession.ts  useDeleteResearchSession.ts  useResearchChat.ts  useResearchMessages.ts  useResearchSessions.ts
frontend/src/hooks/theme/: useTheme.ts
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Home.tsx  KnowledgeBase.tsx  Login.tsx  Signup.tsx
frontend/src/utils/: auth.ts  paper-extract.ts
