[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "arxiv==2.3.0",
    "attrs==25.4.0",
    "backoff==2.2.1",
    "bcrypt==5.0.0",
    "blinker==1.9.0",
    "build==1.3.0",
    "cachetools==6.2.1",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "chromadb==1.3.4",
    "click==8.2.1",
    "cloudinary>=1.44.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "dotenv==0.9.9",
    "durationpy==0.10",
    "email-validator==2.3.0",
    "fastapi-cli==0.0.14",
    "fastapi-cloud-cli==0.3.1",
    "fastapi[standard]==0.115.12",
    "feedparser==6.0.12",
    "filelock==3.20.0",
    "flask==3.1.1",
    "flask-cors==6.0.1",
    "flatbuffers==25.9.23",
    "frozenlist==1.8.0",
    "fsspec==2025.9.0",
    "google-auth==2.43.0",
    "googleapis-common-protos==1.71.0",
    "greenlet==3.2.4",
    "grpcio==1.76.0",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==0.35.3",
    "humanfriendly==10.0",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "kubernetes==34.1.0",
    "langchain==1.0.0",
    "langchain-chroma==1.0.0",
    "langchain-classic==1.0.0",
    "langchain-community==0.4.1",
    "langchain-core==1.0.3",
    "langchain-huggingface==1.0.0",
    "langchain-text-splitters==1.0.0",
    "langgraph==1.0.0",
    "langgraph-checkpoint==2.1.2",
    "langgraph-prebuilt==1.0.0",
    "langgraph-sdk==0.2.9",
    "langsmith==0.4.37",
    "loguru==0.7.3",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "mdurl==0.1.2",
    "mmh3==5.2.0",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "mypy-extensions==1.1.0",
    "networkx==3.5",
    "numpy==2.2.5",
    "oauthlib==3.3.1",
    "onnxruntime==1.23.2",
    "opentelemetry-api==1.38.0",
    "opentelemetry-exporter-otlp-proto-common==1.38.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.38.0",
    "opentelemetry-proto==1.38.0",
    "opentelemetry-sdk==1.38.0",
    "opentelemetry-semantic-conventions==0.59b0",
    "orjson==3.11.3",
    "ormsgpack==1.11.0",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandas==2.3.2",
    "passlib[bcrypt]>=1.7.4",
    "pillow==12.0.0",
    "pinecone>=7.0.1",
    "posthog==5.4.0",
    "propcache==0.4.1",
    "protobuf==6.33.0",
    "psycopg2-binary>=2.9.11",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pybase64==1.4.2",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.11.0",
    "pygments==2.19.2",
    "pymupdf==1.26.6",
    "pypdf>=6.1.3",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "pyreadline3==3.5.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==14.2.0",
    "rich-toolkit==0.15.1",
    "rignore==0.7.3",
    "rpds-py==0.28.0",
    "rsa==4.9.1",
    "safetensors==0.6.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sentence-transformers==5.1.2",
    "sentry-sdk==2.43.0",
    "setuptools==80.9.0",
    "sgmllib3k==1.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "starlette==0.46.2",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.1",
    "torch==2.9.0",
    "tqdm==4.67.1",
    "transformers==4.57.1",
    "typer==0.20.0",
    "typing-extensions==4.13.2",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.3.0",
    "uvicorn[standard]==0.34.2",
    "vadersentiment==3.3.2",
    "watchfiles==1.1.1",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "win32-setctime==1.2.0",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zipp==3.23.0",
    "zstandard==0.25.0",
]
